%% Utility Billing System - Entity Relationship Diagram
%% Current model uses auth.users as the single identity for customers/account holders.
erDiagram
    USERS {
        UUID id PK
        string full_name
        string email UK
        string phone_number UK
        string national_id UK
        string address
        string password
        string status
        boolean email_verified
        boolean must_change_password
        timestamp created_at
        timestamp updated_at
    }

    ROLES {
        UUID id PK
        string role_name UK
    }

    USER_ROLES {
        UUID user_id PK,FK
        UUID role_id PK,FK
    }

    OTPS {
        UUID id PK
        UUID user_id FK
        string otp_code
        string purpose
        boolean verified
        timestamp expiry_time
    }

    REFRESH_TOKENS {
        UUID id PK
        UUID user_id FK
        string token UK
        timestamp expiry_date
        boolean revoked
    }

    TOKEN_BLACKLIST {
        UUID id PK
        string token UK
        timestamp expiry_date
        timestamp created_at
    }

    METERS {
        UUID id PK
        UUID user_id FK
        string meter_number UK
        string meter_type
        date installation_date
        string status
    }

    METER_READINGS {
        UUID id PK
        UUID meter_id FK
        decimal previous_reading
        decimal current_reading
        date reading_date
        int month
        int year
    }

    TARIFFS {
        UUID id PK
        string meter_type
        string tariff_name
        decimal rate
        decimal fixed_charge
        decimal vat
        decimal penalty_rate
        int version
        date effective_date
        boolean active
    }

    PENDING_BILL_GENERATION {
        UUID user_id FK
        UUID meter_id FK
        string meter_type
        decimal consumption
        int billing_month
        int billing_year
    }

    BILLS {
        UUID id PK
        UUID user_id FK
        UUID meter_id FK
        string bill_number UK
        int billing_month
        int billing_year
        decimal consumption
        decimal amount
        decimal tax_amount
        decimal penalty
        decimal balance
        string status
        timestamp generated_date
        UUID approved_by FK
    }

    PAYMENTS {
        UUID id PK
        UUID bill_id FK
        decimal amount_paid
        string payment_method
        date payment_date
        string reference_number UK
    }

    BILL_BALANCES {
        UUID bill_id PK,FK
        decimal balance
        string status
    }

    NOTIFICATIONS {
        UUID id PK
        UUID user_id FK
        string title
        string message
        string status
    }

    STORED_FILES {
        UUID id PK
        string original_name
        string stored_name
        string content_type
        long size_bytes
        string entity_type
        UUID entity_id
        UUID created_by FK
    }

    AUDIT_LOGS {
        UUID id PK
        UUID user_id FK
        string action
        string entity_name
        UUID entity_id
        timestamp timestamp
        string ip_address
        string details
    }

    USERS ||--o{ USER_ROLES : has
    ROLES ||--o{ USER_ROLES : grants
    USERS ||--o{ OTPS : receives
    USERS ||--o{ REFRESH_TOKENS : owns
    USERS ||--o{ METERS : owns
    USERS ||--o{ BILLS : billed_to
    USERS ||--o{ NOTIFICATIONS : receives
    USERS ||--o{ AUDIT_LOGS : performs
    USERS ||--o{ STORED_FILES : uploads
    USERS ||--o{ BILLS : approves

    METERS ||--o{ METER_READINGS : records
    METERS ||--o{ PENDING_BILL_GENERATION : queues
    METERS ||--o{ BILLS : billed_from
    TARIFFS ||--o{ BILLS : prices_by_meter_type
    METER_READINGS ||--o{ PENDING_BILL_GENERATION : creates_queue_item

    PENDING_BILL_GENERATION ||--o{ BILLS : generated_into
    BILLS ||--o{ PAYMENTS : paid_by
    BILLS ||--|| BILL_BALANCES : summarized_by
    BILLS ||--o{ NOTIFICATIONS : triggers
    PAYMENTS ||--o{ NOTIFICATIONS : triggers
